tests/shouldFail/j055c.c
int x;
enum e {a = &x};
int main(void){

}
